<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>java-study</groupId>
    <artifactId>java-study</artifactId>
    <version>0.0.1</version>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <testSourceDirectory>src/main/java</testSourceDirectory>

        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18.1</version>
                <configuration>
                    <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m</argLine>
                    <excludes>
                        <!-- <exclude>**/TestConstants.java</exclude> -->
                    </excludes>
                    <forkMode>always</forkMode>
                </configuration>

            </plugin>
        </plugins>
    </build>
    <packaging>pom</packaging>
    <modules>
        <module>commons</module>
        <module>java</module>
        <module>JavaEE</module>
        <module>misc</module>
        <module>Data</module>
    </modules>
</project>

